software/webapp/frontend/public/index.css
:root {
  --dimgray: #444;
}

::-webkit-scrollbar {
    width: 8px;
}

::-webkit-scrollbar-thumb {
    background-color: var(--dimgray);
    border-radius: 4px;
}

html, body {
    width: 100%;
    height: 100%;
    overflow: hidden;
    background: black;
    color: lightgray;
}

body {
    display: flex;
    font: normal normal normal 15px/17px "Source Code Pro";
}

div.visualization {
    width: 100%;
}

aside {
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    padding: 5px;
    flex-shrink: 0;
    flex-grow: 0;
}

table.matrix {
    width: 100%;
}

table.matrix th, table.matrix td {
    border: 1px solid var(--dimgray);
    text-align: center;
}

div.log {
    margin-top: 5px;
    overflow-x: hidden;
    overflow-y: auto;
    height: 100%;
    box-sizing: border-box;
}

div.log ul {
    margin-top: auto;
    width: 100%;
}

div.log ul li {
    white-space: nowrap;
}

div.log ul li>pre {
    display: inline-block;
    vertical-align: top;
    white-space: pre-wrap;
    word-break: initial;
    word-wrap: break-word;
    overflow-wrap: break-word;
}

div.log ul li.error {
    color: salmon;
}

div.log ul li.error::before {
    content: "⦻ ";
}

div.log ul li.info {
    color: lightblue;
}

div.log ul li.info::before {
    content: "ⓘ ";
}

div.log ul li.warn {
    color: khaki;
}

div.log ul li.warn::before {
    content: "⚠ ";
}

